tests/ui/rfcs/rfc-2632-const-trait-impl/issue-92111.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/issue-92111.rs:20:22
   |
LL | const fn a<T: ~const Destruct>(t: T) {}
   |                      ^^^^^^^^

error: aborting due to previous error

